@@ -513,6 +513,17 @@ static int do_skill_detect_curse(object *pl, object *skill) {
 		esrv_update_item(UPD_FLAGS, pl, tmp);
 		success+= calc_skill_exp(pl,tmp, skill);
 	}
+
+    /* Check ground, too */
+    for(tmp=get_map_ob(pl->map,pl->x,pl->y);tmp;tmp=tmp->above)
+	if (!QUERY_FLAG(tmp,FLAG_IDENTIFIED) && !QUERY_FLAG(tmp,FLAG_KNOWN_CURSED)
+            && (QUERY_FLAG(tmp,FLAG_CURSED) || QUERY_FLAG(tmp,FLAG_DAMNED)) &&
+	    tmp->item_power < skill->level) {
+		SET_FLAG(tmp,FLAG_KNOWN_CURSED);
+		esrv_update_item(UPD_FLAGS, pl, tmp);
+		success+= calc_skill_exp(pl,tmp, skill);
+	}
+
     return success;
 }
 
@@ -527,6 +538,16 @@ static int do_skill_detect_magic(object *pl, object *skill) {
 		esrv_update_item(UPD_FLAGS, pl, tmp);
 		success+=calc_skill_exp(pl,tmp, skill);
 	}
+
+    /* Check ground, too */
+    for(tmp=get_map_ob(pl->map,pl->x,pl->y);tmp;tmp=tmp->above)
+        if(!QUERY_FLAG(tmp,FLAG_IDENTIFIED) && !QUERY_FLAG(tmp,FLAG_KNOWN_MAGICAL)
+	    && (is_magical(tmp)) && tmp->item_power < skill->level) { 
+            	SET_FLAG(tmp,FLAG_KNOWN_MAGICAL);
+		esrv_update_item(UPD_FLAGS, pl, tmp);
+		success+=calc_skill_exp(pl,tmp, skill);
+	}
+
     return success;
 }
 
