@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c: correctly display learned skill's name, and not the
+   scroll's.
+server/skills.c: make 'sense curse' and 'sense magic' check items
+   on the ground too.
+Ryo 2003-11-25
+
 common/loader.l, loader.c: Fix firewalls so that their spell is properly
    initialized - uses 'dam' and not sp for those objects
 server/apply.c: Fix check_weapon_power so that it finds proper wc object.
